# Echo

./: .gitignore  pyproject.toml  readme.md  run.py  settings.json
apps/: Contract.md
apps/api/: README.md
apps/desktop/: README.md
apps/web/: README.md  app.js  eslint.config.js  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  vite.config.ts
db/: chroma.sqlite3
docs/: architecture.md
echo/: config.py  settings.py  workflow_sections.py
echo/chat/: chat_model.py  context_manager.py  registry.py  service.py
echo/skills/: manager.py
echo/workflow/: README.md  drafts.py  nodes.py  prompts.py  service.py  state.py
eco_rag/: config.py  settings.py  workflow_sections.py
eco_rag/chat/: __init__.py  chat_model.py  context_manager.py  registry.py  service.py
eco_rag/domain/: __init__.py  schema.py
eco_rag/indexing/: __init__.py  assembler.py  chunker.py  database_registry.py  embedder.py  errors.py  loader.py  vector_database.py
eco_rag/skills/: __init__.py  database_search.md  manager.py  skills.md  web_search.md
eco_rag/tools/: __init__.py  database_search.py  registry.py  skill_loader.py  web_fetch.py  web_search.py  workspace_files.py
eco_rag/tracing/: __init__.py  trace_board.py
eco_rag/workflow/: README.md  __init__.py  drafts.py  graph.py  nodes.py  prompts.py  service.py  state.py  tracker.py
eco_rag/workflows/: __init__.py  adapter.py  orchestrator.py  query_processor.py  retriever.py  state.py
mcp_server/: client.py  local_e5_embedder.py  server.py
mcp_server/rag/: assembler.py  chunker.py  database_registry.py  embedder.py  loader.py  local_e5_embedder.py  vector_backends.py  vector_database.py
mcp_server/tools/: __init__.py  database_search.py  date.py  registry.py  skill_loader.py  web_fetch.py  web_search.py  workspace_files.py
memory/: README.md
memory/workflow_live/: f6f12364-082d-4538-a59d-3b33a70f891d-13054a20b4.json
models/: README.md  qwen3_embedding_service.py
src/: Adapter.py  ChatModel.py  ContextManager.py  Orchestrator.py  QueryProcessor.py  retreiver.py
src/indexing/: Assembler.py  Chunker.py  VectorDatabase.py
src/utils/: TraceBoard.py  api.py  assembler.py  chunker.py  embedder.py  loader.py  vectorDatabase.py
tests/: download.py
tests/eval/: README.md  flashrag_hotpotqa_eval.py  test_flashrag_hotpotqa_eval.py
tests/integration/: README.md
tests/unit/: README.md  test_api_chat.py  test_chat_memory.py  test_chat_service.py  test_database_registry.py  test_indexing_pipeline.py  test_skills_manager.py  test_web_search.py  test_workflow.py  (+1 more)
(+79 files in other folders)
