[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-rag"
version = "0.1.0"
description = "Reusable RAG core with FastAPI, React, and Tauri app scaffolds."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "fastapi",
    "huggingface_hub",
    "langgraph",
    "langchain-text-splitters",
    "openai",
    "pydantic>=2",
    "PyPDF2",
    "PyYAML",
    "python-dotenv",
    "tqdm",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["eco_rag*"]

[tool.setuptools.package-data]
"eco_rag.workflow" = ["prompt_templates/*.yaml"]
