[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "echo"
version = "0.1.0"
description = "Reusable RAG core with FastAPI, React, and Tauri app scaffolds."
readme = "readme.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "chromadb",
    "faiss-cpu",
    "fastapi",
    "langgraph",
    "langchain-text-splitters",
    "mcp[cli]",
    "openai",
    "pydantic>=2",
    "playwright",
    "python-multipart",
    "PyPDF2",
    "PyYAML",
    "tqdm",
    "uvicorn",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers",
    "torch",
]

[tool.setuptools.packages.find]
include = ["echo*", "mcp_server*"]

[tool.setuptools.package-data]
"echo.workflow" = ["prompt_templates/*.yaml"]
"echo.skills" = ["*.md", "*/SKILL.md"]
