[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "echo"
version = "0.1.0"
description = "Agentic Retrieval Assistant."
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "chromadb",
    "fastapi",
    "langgraph",
    "langchain-text-splitters",
    "mcp[cli]",
    "openai",
    "pydantic>=2",
    "python-multipart",
    "PyPDF2",
    "PyYAML",
    "tqdm",
    "uvicorn",
]

[project.optional-dependencies]
faiss-backend =[
    "faiss-cpu",
]
local-embeddings = [
    "sentence-transformers",
    "torch",
]
retrieval_plugins = [
    "marker-pdf",
    "playwright",
]

[tool.setuptools.packages.find]
include = ["echo*", "mcp_server*"]

[tool.setuptools.package-data]
"echo.workflow" = ["prompt_templates/*.yaml"]
"echo.skills" = ["*.md", "*/SKILL.md"]
